--- a/quski-oro-ear/pom.xml
+++ b/quski-oro-ear/pom.xml
@@ -138,5 +138,5 @@
 		</profile>
 	</profiles>
 
-	<description>siniestro-agricola: siniestro-agricola EAR Module</description>
+	<description>quski-oro: quski-oro EAR Module</description>
 </project>
