--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 				<type>ejb</type>
 			</dependency>
 
+				<dependency>
+				 <groupId>com.relative</groupId>
+				  <artifactId>integracion-soap</artifactId>
+				  <version>1.0</version>
+				  </dependency>
 			<!-- Define the version of the WAR so that we don't need to repeat ourselves 
 				in every module -->
 			<dependency>
