--- a/quski-oro-rest/pom.xml
+++ b/quski-oro-rest/pom.xml
@@ -200,6 +200,12 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+				 <groupId>com.relative</groupId>
+				  <artifactId>integracion-soap</artifactId>
+				  <version>1.0</version>
+				  </dependency>
 
 		<dependency>
 			<groupId>org.jboss.shrinkwrap.resolver</groupId>
