--- a/quski-oro-rest/pom.xml
+++ b/quski-oro-rest/pom.xml
@@ -202,10 +202,10 @@
 		</dependency>
 		
 		<dependency>
-				 <groupId>com.relative</groupId>
-				  <artifactId>integracion-soap</artifactId>
-				  <version>1.0</version>
-				  </dependency>
+			 <groupId>com.relative</groupId>
+			  <artifactId>integracion-soap</artifactId>
+			  <scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.shrinkwrap.resolver</groupId>
