--- a/quski-oro-datamodel-ejb/pom.xml
+++ b/quski-oro-datamodel-ejb/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-envers</artifactId>
-		    <version>5.4.2.Final</version>
+		    <version>5.4.2.Final</version><!--$NO-MVN-MAN-VER$-->
 		    <scope>provided</scope>
 		</dependency>
 		
