--- a/quski-oro-service-ejb/pom.xml
+++ b/quski-oro-service-ejb/pom.xml
@@ -96,7 +96,7 @@
 		<dependency>
 				 <groupId>com.relative</groupId>
 				  <artifactId>integracion-soap</artifactId>
-				  <version>1.0</version>
+				  <version>1.0</version><!--$NO-MVN-MAN-VER$-->
 				  </dependency>
 		<dependency>
 			<groupId>com.relative</groupId>
@@ -121,7 +121,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.1.5.Final</version>
+			<version>1.1.5.Final</version><!--$NO-MVN-MAN-VER$-->
 			<scope>test</scope>
 		</dependency>
 
