--- a/quski-oro-service-ejb/pom.xml
+++ b/quski-oro-service-ejb/pom.xml
@@ -96,7 +96,7 @@
 		<dependency>
 				 <groupId>com.relative</groupId>
 				  <artifactId>integracion-soap</artifactId>
-				  <version>1.0</version><!--$NO-MVN-MAN-VER$-->
+				  <version>1.0</version>
 				  </dependency>
 		<dependency>
 			<groupId>com.relative</groupId>
