--- a/quski-oro-datamodel-ejb/pom.xml
+++ b/quski-oro-datamodel-ejb/pom.xml
@@ -81,8 +81,12 @@
 				<artifactId>jasperreports</artifactId>
 				<version>5.6.0</version>
 			</dependency>
-			
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
